# TuneBox

./: .git_commit_msg  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  commit.txt  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  ruff.yml
Compose/backend/: Dockerfile
Compose/frontend/: Dockerfile  nginx.conf
backend/: __init__.py  config.py  exceptions.py  main.py  requirements.txt  state.py  utils.py  websockets.py
backend/routers/: __init__.py  auth.py  music.py  stats.py
backend/services/: __init__.py  mock_data.py  plex.py  redis.py  redis_client.py  stats.py
backend/tests/: conftest.py  test_auth.py  test_mock_music.py  test_orchestrator.py  test_plex.py  test_redis.py  test_sanity.py  test_utils.py  test_websockets.py
docs/: api.md  architecture.md  deployment.md  development.md  settings.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  theme.tsx  utils.ts
frontend/src/api/: axiosInstance.ts
frontend/src/components/: ArtistAlbums.css  ArtistAlbums.tsx  ArtistList.css  ArtistList.tsx  FallbackImage.tsx  MusicControls.css  MusicControls.tsx  Pagination.css  Pagination.tsx  Queue.css  Queue.tsx  Stats.css  Stats.tsx  TrackList.css  TrackList.tsx
